# ml_tutor_bot

./: .dockerignore  .env  .env.example  .gitignore  COMMANDS_REMOVAL_CHECK.md  COMPLETE_COURSE_UPDATE.md  COURSES_MENU_DESIGN_UPDATE.md  COURSES_MENU_FIX.md  COURSE_MENU_DESIGN_UPDATE.md  DOCKER_OPTIMIZATION.md  Dockerfile  ERRORS_REMOVAL.md  FROZEN_INSTANCE_FIX.md  LESSONS_UPDATE.md  LESSON_CHECKMARKS_FIX.md  LESSON_STATUS_UPDATE.md  LEVEL_EMOJI_FIX.md  MENU_COURSE_BUTTON_FIX.md  Makefile  NEW_QUESTION_BUTTON_REMOVAL.md  PROFILE_REMOVAL.md  PROGRESS_DISPLAY_FIX.md  PROGRESS_DISPLAY_UPDATE.md  PROGRESS_LOGIC_FIX.md  PROMPT_UPDATE.md  QUICK_FIX.md  README.md  RECURSION_FIX.md  RUNTIME_ERROR_FIX.md  STATISTICS_UPDATE.md  STATUS_FIX.md  TELEGRAM_MENU_UPDATE.md  TEST_BUTTONS_UPDATE.md  TEST_DIVERSITY_IMPROVEMENT.md  TEST_PROMPT_UPDATE.md  UNKNOWN_COMMAND_FIX.md  USER_STATUS_UPDATE.md  VOICE_FIX.md  WELCOME_MESSAGES_UPDATE.md  WELCOME_MESSAGE_UPDATE.md  (+6 more)
bot/: __init__.py  database.py  dialog.py  handlers.py  handlers_backup.py  handlers_new.py  handlers_old.py  main.py  progress.py  prompts.py  simple_rag.py  test_prompts.py
bot/rag/: __init__.py  document_processor.py  rag_service.py  vector_store.py
data/: math_course.json
doc/: CLOUD_DEPLOYMENT_OPTIONS.md  CLOUD_DEPLOYMENT_SUMMARY.md  DOCKER_TESTING.md  QUICK_START_CLOUD.md  conventions.md  product_idea.md  tasklist.md  vision.md  workflow.md
doc/guides/: botfather_setup.md  cloud_env_debug.md  flyio_deployment.md  huggingface_setup.md  openrouter_setup.md  railway_deployment.md
llm/: __init__.py  client.py  speech_client.py  tavily_client.py  vision_client.py
tests/: __init__.py  test_bot.py
