[project]
name = "ml-tutor-bot"
version = "0.1.0"
description = "ML Tutor Telegram Bot - образовательный бот для изучения машинного обучения"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot", "llm", "tests"]

